Fix bug on small mobile viewports (I hope)

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -163,6 +163,7 @@ hotspot-map {
 
 .popup {
   position: absolute;
+  margin: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
